Agrega concepto "Numero de Cuotas"

--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                 <h2>10. TRES ÚLTIMAS LIQUIDACIONES DE REMUNERACIONES</h2>
                 <p>Las últimas liquidaciones son aquellas previas a la fecha de ingreso de la solicitud de condonación. Correspondientes a los tres últimos meses desde esa fecha. Regla especial: las liquidaciones son entregadas durante la segunda mitad del mes y no al final de este, por lo que si un funcionario ingresa una presentación el 25 de mayo, sus tres últimas liquidaciones serán las de los meses de mayo, abril y marzo. Por el contrario, si la solicitud fue hecha a principios de julio, el interesado puede acompañar las liqudaciones de junio, mayo y abril.</p>
             </div>
+
+            <div class="term-card">
+                <h2>11. NÚMERO DE CUOTAS</h2>
+                <p>Corresonde al número de cuotas que el solicitante pide considerar para proceder al pago íntegro de la deuda. También es admisible permitir que el solicitante no indique un número exacto de cuotas, sino que aluda al "máximo posible" o emplee otra expresión que aluda al mayor número posible de cuotas que Contraloría puede otorgar.</p>
+            </div>
         </main>
     </div>
 
