Perfecciona concepto número de cuotas.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glosario de Automatización</title>
+    <title>Glosario de Condonaciones</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
@@ -72,7 +72,7 @@
     <div class="container">
         <header>
             <h1>GLOSARIO</h1>
-            <p>A continuación se definen algunos conceptos para perfeccionar el examen de admisibilidad:</p>
+            <p>A continuación se definen algunos conceptos para perfeccionar el examen de admisibilidad de solicitudes de condonación:</p>
         </header>
 
         <main class="glossary">
@@ -128,7 +128,16 @@
 
             <div class="term-card">
                 <h2>11. NÚMERO DE CUOTAS</h2>
-                <p>Corresonde al número de cuotas que el solicitante pide considerar para proceder al pago íntegro de la deuda. También es admisible permitir que el solicitante no indique un número exacto de cuotas, sino que aluda al "máximo posible" o emplee otra expresión que aluda al mayor número posible de cuotas que Contraloría puede otorgar.</p>
+                <p>Es la cantidad de pagos mensuales en que el solicitante propone restituir la deuda si no se le concede la condonación total. Este dato debe estar expresamente indicado en la solicitud solo si el petitorio incluye alguna de las siguientes fórmulas:</p>
+                    <ol>
+                        <li>“Solicito condonación y, en subsidio, facilidades de pago”</li>
+                        <li>“Solicito facilidades de pago”</li>
+                    </ol>
+                <p>En esos casos, el número de cuotas debe estar presente para que el requisito A-e del checklist se marque como ✅ Cumplido. Existen dos maneras de dar por cumplido este requisito:</p>
+                    <ol>
+                        <li>Indicando un número exacto de cuotas o un rango de ellas</li>
+                        <li>Pidiendo el "número máximo posible de cuotas", o empleando una expresión semejante</li>
+                    </ol>
             </div>
         </main>
     </div>
